<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tanyalova</groupId>
    <artifactId>MobileAndWebTesting</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>MobileAndWebTesting</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <log4j2.version>2.20.0</log4j2.version>
        <aspectj.version>1.9.19</aspectj.version>
        <testng.thread.count>5</testng.thread.count>
        <maven.surfireplugin.version>3.1.2</maven.surfireplugin.version>
        <maven.failsafeplugin.version>3.1.2</maven.failsafeplugin.version>
        <argLine>-DjvmArgs="--add-opens java.base/java.lang=ALL-UNNAMED"</argLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.8.0</version>
        </dependency>
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>8.5.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-collections</artifactId>
                    <groupId>commons-collections</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.28</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.11.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.13.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>com.influxdb</groupId>
            <artifactId>influxdb-client-java</artifactId>
            <version>6.10.0</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.properties</include>
                    <include>**/*.sh</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surfireplugin.version}</version>
                <configuration>
                    <!-- Disable unit tests -->
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafeplugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <argLine>
                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                    </argLine>
                    <parallel>tests</parallel>
                    <threadCount>${testng.thread.count}</threadCount>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/${testng.file}</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                        <runIOSWebDriverAgent>false</runIOSWebDriverAgent>
                    </systemPropertyVariables>
                    <properties>
                        <property>
                            <name>junit</name>
                            <value>false</value>
                        </property>
                        <property>
                            <name>listener</name>
                            <value>com.tanyalova.common.InfluxDBListener</value>
                        </property>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value> <!-- disabling default listeners is optional -->
                        </property>
                        <property>
                            <name>testnames</name>
                            <value>${testnames}</value>
                        </property>
                    </properties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-testng</artifactId>
                        <version>${maven.surfireplugin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>Jenkins</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.file>testng.xml</testng.file>
                <testnames>Web,IOS,Android</testnames>
                <runIOSWebDriverAgent>false</runIOSWebDriverAgent>
                <env></env>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
<!--                            <execution>-->
<!--                                <id>Start Grid</id>-->
<!--                                <phase>pre-integration-test</phase>-->
<!--                                <goals>-->
<!--                                    <goal>exec</goal>-->
<!--                                </goals>-->
<!--                                <configuration>-->
<!--                                    <executable>docker</executable>-->
<!--                                    <commandlineArgs>compose -f ./docker-grid.yml up &#45;&#45;detach</commandlineArgs>-->
<!--                                </configuration>-->
<!--                            </execution>-->
<!--                            <execution>-->
<!--                                <id>Stop Grid</id>-->
<!--                                <phase>post-integration-test</phase>-->
<!--                                <goals>-->
<!--                                    <goal>exec</goal>-->
<!--                                </goals>-->
<!--                                <configuration>-->
<!--                                    <executable>docker</executable>-->
<!--                                    <commandlineArgs>compose -f ./docker-grid.yml down -v &#45;&#45;remove-orphans &#45;&#45;timeout 30</commandlineArgs>-->
<!--                                </configuration>-->
<!--                            </execution>-->
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>regression</id>
            <properties>
                <testng.file>testng.xml</testng.file>
            </properties>
        </profile>
        <profile>
            <id>extended</id>
            <properties>
                <testng.file>testng_extended.xml</testng.file>
            </properties>
        </profile>
        <profile>
            <id>smoke</id>
            <properties>
                <testng.file>testng_smoke.xml</testng.file>
            </properties>
        </profile>
    </profiles>
</project>
